--- a/attempt 1.ipynb
+++ b/attempt 1.ipynb
@@ -55,12 +55,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7a036c1-2213-46d9-8e1a-295e941bc016",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "We are trying to answer the question: \n",
+    "\n",
+    "To answer this question we are "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1d329b4-9c4b-4b34-90ef-0307ce1dd6d8",
+   "id": "54b4f49f-76e6-441f-aa79-a4d8b0109719",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0320d835-b452-479e-84db-2d1f1dc80e10",
+   "metadata": {},
+   "source": [
+    "## Data pre-processing\n",
+    "What's needed to load the data, clean the data, normalize, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d9f3442-213a-4db5-9d69-70e20e04c002",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41c05b68-1d07-4e07-bfec-2a24bdb83f75",
+   "metadata": {},
+   "source": [
+    "## Model setup\n",
+    "Setup one or more models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d515e41-a84c-4141-abab-dc49fe478213",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "019c70cb-69af-4fcc-9fa0-38c4380c8654",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter tuning\n",
+    "Do some playing with the model hyperparameters (learning rate, optimizer, batch size, epochs, whatever makes sense)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "427581f6-27eb-469d-87c1-eed389399a29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45381df1-5759-4c57-bd8f-31f8abde19b4",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "How did the model do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8849cf-bde9-4376-b5f2-94b85f9f3d4e",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "Summarize what worked, what didn't etc."
+   ]
   }
  ],
  "metadata": {
