--- a/attempt 1.ipynb
+++ b/attempt 1.ipynb
@@ -20,6 +20,9 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
     "import os\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.applications import DenseNet121\n",
@@ -36,22 +39,274 @@
    "metadata": {},
    "source": [
     "## Import Data \n",
-    "Data from https://archive.ics.uci.edu/ (UC Irvine Machine Learning Repository)\n",
+    "Data selected from https://archive.ics.uci.edu/ (UC Irvine Machine Learning Repository)\n",
     "\n",
-    "Data about"
+    "Data about mushrooms and mushroom identification. \n",
+    "\n",
+    "Mushroom. (1987). UCI Machine Learning Repository. https://doi.org/10.24432/C5959T."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "97228432-45c1-415f-b2aa-f44b37d50629",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cap-shape</th>\n",
+       "      <th>cap-surface</th>\n",
+       "      <th>cap-color</th>\n",
+       "      <th>bruises%3F</th>\n",
+       "      <th>odor</th>\n",
+       "      <th>gill-attachment</th>\n",
+       "      <th>gill-spacing</th>\n",
+       "      <th>gill-size</th>\n",
+       "      <th>gill-color</th>\n",
+       "      <th>stalk-shape</th>\n",
+       "      <th>...</th>\n",
+       "      <th>stalk-surface-below-ring</th>\n",
+       "      <th>stalk-color-above-ring</th>\n",
+       "      <th>stalk-color-below-ring</th>\n",
+       "      <th>veil-type</th>\n",
+       "      <th>veil-color</th>\n",
+       "      <th>ring-number</th>\n",
+       "      <th>ring-type</th>\n",
+       "      <th>spore-print-color</th>\n",
+       "      <th>population</th>\n",
+       "      <th>habitat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>n</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>k</td>\n",
+       "      <td>e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>y</td>\n",
+       "      <td>t</td>\n",
+       "      <td>a</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>b</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>l</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>b</td>\n",
+       "      <td>n</td>\n",
+       "      <td>e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>m</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>x</td>\n",
+       "      <td>y</td>\n",
+       "      <td>w</td>\n",
+       "      <td>t</td>\n",
+       "      <td>p</td>\n",
+       "      <td>f</td>\n",
+       "      <td>c</td>\n",
+       "      <td>n</td>\n",
+       "      <td>n</td>\n",
+       "      <td>e</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>p</td>\n",
+       "      <td>k</td>\n",
+       "      <td>s</td>\n",
+       "      <td>u</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>x</td>\n",
+       "      <td>s</td>\n",
+       "      <td>g</td>\n",
+       "      <td>f</td>\n",
+       "      <td>n</td>\n",
+       "      <td>f</td>\n",
+       "      <td>w</td>\n",
+       "      <td>b</td>\n",
+       "      <td>k</td>\n",
+       "      <td>t</td>\n",
+       "      <td>...</td>\n",
+       "      <td>s</td>\n",
+       "      <td>w</td>\n",
+       "      <td>w</td>\n",
+       "      <td>p</td>\n",
+       "      <td>w</td>\n",
+       "      <td>o</td>\n",
+       "      <td>e</td>\n",
+       "      <td>n</td>\n",
+       "      <td>a</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  cap-shape cap-surface cap-color bruises%3F odor gill-attachment  \\\n",
+       "0         x           s         n          t    p               f   \n",
+       "1         x           s         y          t    a               f   \n",
+       "2         b           s         w          t    l               f   \n",
+       "3         x           y         w          t    p               f   \n",
+       "4         x           s         g          f    n               f   \n",
+       "\n",
+       "  gill-spacing gill-size gill-color stalk-shape  ... stalk-surface-below-ring  \\\n",
+       "0            c         n          k           e  ...                        s   \n",
+       "1            c         b          k           e  ...                        s   \n",
+       "2            c         b          n           e  ...                        s   \n",
+       "3            c         n          n           e  ...                        s   \n",
+       "4            w         b          k           t  ...                        s   \n",
+       "\n",
+       "  stalk-color-above-ring stalk-color-below-ring veil-type veil-color  \\\n",
+       "0                      w                      w         p          w   \n",
+       "1                      w                      w         p          w   \n",
+       "2                      w                      w         p          w   \n",
+       "3                      w                      w         p          w   \n",
+       "4                      w                      w         p          w   \n",
+       "\n",
+       "  ring-number ring-type spore-print-color population habitat  \n",
+       "0           o         p                 k          s       u  \n",
+       "1           o         p                 n          n       g  \n",
+       "2           o         p                 n          n       m  \n",
+       "3           o         p                 k          s       u  \n",
+       "4           o         e                 n          a       g  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## add dataset\n",
-    "## initial table of data"
+    "# Data saves in folder titled Mushroom Data, but taking data directly from website\n",
+    "# Add Dataset\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "\n",
+    "# Load dataset from UCI Machine Learning Repository\n",
+    "mushroom = fetch_openml(name='mushroom', version=1)\n",
+    "\n",
+    "# Convert the data into a pandas DataFrame\n",
+    "df = pd.DataFrame(data=mushroom.data, columns=mushroom.feature_names)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8688aaa-736b-4cf8-a360-133975d15a27",
+   "metadata": {},
+   "source": [
+    "cap-shape:                bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s\n",
+    "\n",
+    "cap-surface:              fibrous=f,grooves=g,scaly=y,smooth=s\n",
+    "\n",
+    "cap-color:                brown=n,buff=b,cinnamon=c,gray=g,green=r, pink=p,purple=u,red=e,white=w,yellow=y\n",
+    "\n",
+    "bruises?:                 bruises=t,no=f\n",
+    "\n",
+    "odor:                     almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s\n",
+    "     6gill-attachment:          attached=a,descending=d,free=f,notched=n\n",
+    "     7. gill-spacing:             close=c,crowded=w,distant=d\n",
+    "     8. gill-size:                broad=b,narrow=n\n",
+    "     9. gill-color:               black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\n",
+    "    10. stalk-shape:              enlarging=e,tapering=t\n",
+    "    11. stalk-root:               bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\n",
+    "    12. stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "    13. stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "    14. stalk-color-above-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "    15. stalk-color-below-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "    16. veil-type:                partial=p,universal=u\n",
+    "    17. veil-color:               brown=n,orange=o,white=w,yellow=y\n",
+    "    18. ring-number:              none=n,one=o,two=t\n",
+    "    19. ring-type:                cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\n",
+    "    20. spore-print-color:        black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\n",
+    "    21. population:               abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\n",
+    "    22. habitat:                  grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
    ]
   },
   {
@@ -62,7 +317,7 @@
     "## Introduction\n",
     "We are trying to answer the question: \n",
     "\n",
-    "To answer this question we are "
+    "To answer this question we are"
    ]
   },
   {
