--- a/attempt 1.ipynb
+++ b/attempt 1.ipynb
@@ -281,6 +281,7 @@
    "id": "c8688aaa-736b-4cf8-a360-133975d15a27",
    "metadata": {},
    "source": [
+    "## Variable Meaning\n",
     "cap-shape:                bell=b,conical=c,convex=x,flat=f, knobbed=k,sunken=s\n",
     "\n",
     "cap-surface:              fibrous=f,grooves=g,scaly=y,smooth=s\n",
@@ -290,23 +291,40 @@
     "bruises?:                 bruises=t,no=f\n",
     "\n",
     "odor:                     almond=a,anise=l,creosote=c,fishy=y,foul=f, musty=m,none=n,pungent=p,spicy=s\n",
-    "     6gill-attachment:          attached=a,descending=d,free=f,notched=n\n",
-    "     7. gill-spacing:             close=c,crowded=w,distant=d\n",
-    "     8. gill-size:                broad=b,narrow=n\n",
-    "     9. gill-color:               black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\n",
-    "    10. stalk-shape:              enlarging=e,tapering=t\n",
-    "    11. stalk-root:               bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\n",
-    "    12. stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
-    "    13. stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
-    "    14. stalk-color-above-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
-    "    15. stalk-color-below-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
-    "    16. veil-type:                partial=p,universal=u\n",
-    "    17. veil-color:               brown=n,orange=o,white=w,yellow=y\n",
-    "    18. ring-number:              none=n,one=o,two=t\n",
-    "    19. ring-type:                cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\n",
-    "    20. spore-print-color:        black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\n",
-    "    21. population:               abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\n",
-    "    22. habitat:                  grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
+    "\n",
+    "gill-attachment:          attached=a,descending=d,free=f,notched=n\n",
+    "\n",
+    "gill-spacing:             close=c,crowded=w,distant=d\n",
+    "\n",
+    "gill-size:                broad=b,narrow=n\n",
+    "\n",
+    "gill-color:               black=k,brown=n,buff=b,chocolate=h,gray=g, green=r,orange=o,pink=p,purple=u,red=e, white=w,yellow=y\n",
+    "\n",
+    "stalk-shape:              enlarging=e,tapering=t\n",
+    "\n",
+    "stalk-root:               bulbous=b,club=c,cup=u,equal=e, rhizomorphs=z,rooted=r,missing=?\n",
+    "\n",
+    "stalk-surface-above-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "\n",
+    "stalk-surface-below-ring: fibrous=f,scaly=y,silky=k,smooth=s\n",
+    "\n",
+    "stalk-color-above-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "\n",
+    "stalk-color-below-ring:   brown=n,buff=b,cinnamon=c,gray=g,orange=o, pink=p,red=e,white=w,yellow=y\n",
+    "\n",
+    "veil-type:                partial=p,universal=u\n",
+    "\n",
+    "veil-color:               brown=n,orange=o,white=w,yellow=y\n",
+    "\n",
+    "ring-number:              none=n,one=o,two=t\n",
+    "\n",
+    "ring-type:                cobwebby=c,evanescent=e,flaring=f,large=l, none=n,pendant=p,sheathing=s,zone=z\n",
+    "\n",
+    "spore-print-color:        black=k,brown=n,buff=b,chocolate=h,green=r, orange=o,purple=u,white=w,yellow=y\n",
+    "\n",
+    "population:               abundant=a,clustered=c,numerous=n, scattered=s,several=v,solitary=y\n",
+    "\n",
+    "habitat:                  grasses=g,leaves=l,meadows=m,paths=p, urban=u,waste=w,woods=d"
    ]
   },
   {
